--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -18,6 +18,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    android {
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+    }
 }
 
 dependencies {
@@ -26,6 +32,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    // Declare the dependency for the Realtime Database library
+    implementation 'com.google.firebase:firebase-database'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
