--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -6,11 +6,12 @@ android {
     buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "com.example.fumigabot"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
