--- a/Fumigabot/build.gradle
+++ b/Fumigabot/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google() // Google's Maven repository
         jcenter()
+        mavenCentral()
         
     }
     dependencies {
@@ -19,7 +20,7 @@ allprojects {
     repositories {
         google() // Google's Maven repository
         jcenter()
-        
+        mavenCentral()
     }
 }
 
