Agrega boton a MisQuimicosActivity

--- a/Fumigabot/app/src/main/AndroidManifest.xml
+++ b/Fumigabot/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".VincularDispositivoActivity"></activity>
-        <activity android:name=".RobotHistorialActivity"></activity>
         <activity android:name=".RobotHomeActivity"></activity>
+        <activity android:name=".RobotHistorialActivity"></activity>
+        <activity android:name=".MisQuimicosActivity"></activity>
     </application>
 
 </manifest>
