Rediseño de app: primera intención
Pantalla principal dividida en las principales categorías: Home, Historial, Químicos y el espacio para uno más (ya sea Configuración, Notificaciones, etc, a definir).

Funcionamiento de fumigación y consultas de historial correctas. Falta agregar campo para nuevos químicos (es la pantalla que más falta).

Reestructuración completa de los colores y estilos (en cuanto a formas, especialmente).

--- a/Fumigabot/app/src/main/AndroidManifest.xml
+++ b/Fumigabot/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_fumigabot_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/FumigabotTheme">
-        <activity android:name=".InicialActivity">
+        android:theme="@style/Theme.Fumigabot">
+        <activity android:name=".home.FragmentActivity"></activity>
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
