--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -35,6 +35,13 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     // Declare the dependency for the Realtime Database library
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.fragment:fragment:1.3.6'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
