--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "com.example.fumigabot"
-        minSdkVersion 17
+        minSdkVersion 19//17
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
