--- a/Fumigabot/app/src/main/AndroidManifest.xml
+++ b/Fumigabot/app/src/main/AndroidManifest.xml
@@ -8,15 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_fumigabot_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fumigabot">
         <activity android:name=".RobotHomeActivity"></activity>
+        android:theme="@style/Theme.Defy">
+        <activity android:name=".RobotHomeActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VincularDispositivoActivity"></activity>
+        <activity android:name=".VincularDispositivoActivity" />
     </application>
 
 </manifest>
