--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "com.example.fumigabot"
-        minSdkVersion 19//17
+        minSdkVersion 21//19//17
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -36,10 +36,14 @@ dependencies {
     // Declare the dependency for the Realtime Database library
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.android.material:material:1.4.0'
+    //Para la comunicacion usando registerActivityOnResult
+    implementation "androidx.activity:activity:1.3.1"
     implementation 'androidx.fragment:fragment:1.3.6'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
+    //Library para el stepper
+    implementation 'com.github.acefalobi:android-stepper:0.2.2'
+    //implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    //implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    //implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
