--- a/Fumigabot/app/src/main/AndroidManifest.xml
+++ b/Fumigabot/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_fumigabot_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Defy">
-        <activity android:name=".DetalleEntradaHistorialActivity"></activity>
+        <activity android:name=".DetalleFumigacionProgramadaActivity"></activity>
+        <activity android:name=".DetalleEntradaHistorialActivity" />
         <activity
             android:name=".NuevaFumigacionActivity"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".RobotHomeActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
