Reemplazo de Timer por Alarmas

--- a/Fumigabot/app/src/main/AndroidManifest.xml
+++ b/Fumigabot/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".VincularDispositivoActivity" />
+        <receiver android:name=".alarmasProgramadas.AlarmaReceiver"/>
     </application>
 
 </manifest>
