--- a/Fumigabot/app/src/main/AndroidManifest.xml
+++ b/Fumigabot/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_fumigabot_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Defy">
-        <activity android:name=".DetalleFumigacionProgramadaActivity"></activity>
+        <activity android:name=".ConfigurarRobotActivity"></activity>
+        <activity android:name=".DetalleFumigacionProgramadaActivity" />
         <activity android:name=".DetalleEntradaHistorialActivity" />
         <activity
             android:name=".NuevaFumigacionActivity"
@@ -23,7 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".VincularDispositivoActivity" />
-        <receiver android:name=".alarmasProgramadas.AlarmaReceiver"/>
+
+        <receiver android:name=".alarmasProgramadas.AlarmaReceiver" />
     </application>
 
 </manifest>
