--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     // Declare the dependency for the Realtime Database library
     implementation 'com.google.firebase:firebase-database'
+    // Declare the dependency for the Cloud Functions library
+    implementation 'com.google.firebase:firebase-functions'
     implementation 'com.google.android.material:material:1.4.0'
     //Para la comunicacion usando registerActivityOnResult
     implementation "androidx.activity:activity:1.3.1"
