--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    // Declare the dependency for the Firebase Authentication library
+    implementation 'com.google.firebase:firebase-auth'
+    // Also declare the dependency for the Google Play services library and specify its version
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
     // Declare the dependency for the Realtime Database library
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.android.material:material:1.4.0'
