--- a/Fumigabot/app/src/main/AndroidManifest.xml
+++ b/Fumigabot/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_fumigabot_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Defy">
-        <activity android:name=".DetalleFumigacionProgramadaActivity"></activity>
+        <activity android:name=".DetalleFumigacionProgramadaActivity" />
         <activity android:name=".DetalleEntradaHistorialActivity" />
         <activity
             android:name=".NuevaFumigacionActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".RobotHomeActivity" />
+        <activity android:name=".SignInActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
