--- a/fumigabot-firebase-functions/functions/package.json
+++ b/fumigabot-firebase-functions/functions/package.json
@@ -13,7 +13,11 @@
     "node": "14"
   },
   "main": "index.js",
+  "resolutions": {
+    "@firebase/database-compat": "0.1.2"
+  },
   "dependencies": {
+    "@google-cloud/tasks": "2.4.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
