--- a/Fumigabot/app/build.gradle
+++ b/Fumigabot/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
     // Declare the dependency for the Cloud Functions library
     implementation 'com.google.firebase:firebase-functions'
+    // Dependencia para Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.android.material:material:1.4.0'
     //Para la comunicacion usando registerActivityOnResult
     implementation "androidx.activity:activity:1.3.1"
